<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/task"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:maxLines="1"
            android:textSize="18sp"
            />

    </LinearLayout>

    <DatePicker
        android:id="@+id/dpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:scaleX="1.2"
        android:scaleY="1.2"

        />

    <RadioGroup
        android:id="@+id/rgStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/radio_button_green"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/rbYellow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/radio_button_yellow"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/radio_button_red"
            android:button="@android:color/transparent" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/normal" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/important" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/very_important" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="130dp"
            android:layout_height="?listPreferredItemHeight"
            android:layout_margin="20dp"
            android:onClick="cancel"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:text="@string/cancel"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="130dp"
            android:layout_height="?listPreferredItemHeight"
            android:layout_margin="20dp"
            android:onClick="save"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:text="@string/ok"
            android:textSize="16sp"
            />
    </LinearLayout>


</LinearLayout>